css/styles.css
body {
    font-family: 'Lato', sans-serif;
}

.services {
    background-color: #F8F8F8;
}

.services .row {
    max-width: 992px;
    margin: 0 auto;
}

.intro {
    background-color: #000;
}

.services-box {
    background-color: #FFF;
    max-width: 400px;
    margin: 0 auto;
}

.img-center, .paragraph-center, .services h2{
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.paragraph-center {
    max-width: 400px;
    padding: 1em 1em 0;
}

.cta {
    background-color: rgba(194, 47, 47,1);
    color: #FFF;
    padding: 1em 1.5em;
    border: 0px solid #fff!important;
    margin: 1em 0 .5em;
}

.cta:hover {
    background-color: rgba(194, 47, 47,.95);
    color: #FFF;
    border: 0px solid #fff !important;
}

.cta span {
    margin-right: .5em;
}

.services h2 {
    font-size: 24px;
    font-weight: 700;
    max-width: 400px;
    color: rgba(194, 47, 47,1);
    padding: 1em 0 0.5em;
}

